Issue #SB-1529 fix : Added description is not aligned properly when any URL is added in the description

--- a/src/app/themes/default/assets/styles/main.css
+++ b/src/app/themes/default/assets/styles/main.css
@@ -52,6 +52,7 @@
   font-family: 'sunbirdregularfont';
   font-size: 1em;
   color: #7c7b7b;
+  overflow-wrap: break-word;
 }
 .sliderCardSubDesc {
   font-family: 'sunbirdregularfont';
